notification improvements for Android P: - use the new MessagingStyle.Message.setData method to display images within the MessagingStyle notification - Use the Notification.Person class instead of just giving the messaging style notification a sender name - display pictures for people, in the MessagingStyle notifications - tell the MessagingStyle notifications when it is a group message - change the button text for 'read' to 'mark as read'
These changes correspond to https://github.com/klinker-apps/messenger-issues/issues/621

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -239,6 +239,7 @@
         <item quantity="other">%1$d new messages</item>
     </plurals>
     <string name="read">Read</string>
+    <string name="mark_as_read">Mark as Read</string>
     <string name="mute">Mute</string>
     <string name="reply">Reply</string>
     <string name="reply_to">Reply to %1$s</string>
