--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -414,6 +414,7 @@
     <string name="trial_subscription_title">You have %s days left in the trial</string>
     <string name="trial_subscription_summary">Tap here to upgrade or cancel the trial!</string>
     <string name="upgrade_or_cancel_title">Done with the trial?</string>
+    <string name="trial_expired">Thanks for the trial!</string>
     <string name="upgrade_or_cancel">You can upgrade your account to a subscription or lifetime membership to keep using your other devices with Pulse!\n\nIf you need to cancel, I am sorry to see you go.
         Your account will be removed and you won\'t be charged. You can continue to use the app on your phone, just like normal, for free! Feel free to come back, any time.</string>
     <string name="upgrade">Upgrade!</string>
