update the process for cancelling or upgrading the trial (at the end of the seven days or when the user hits the upgrade button

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -708,5 +708,7 @@
     <string name="notification_days_remaining_in_trial">%s days remaining in your trial. Click to upgrade!</string>
     <string name="notification_last_day_of_trial">This is the last day of your trial. Click to upgrade!</string>
     <string name="notification_trial_expired">Your seven day trial is over. Click to upgrade!</string>
+    <string name="continue_with_phone_app">You can continue using the app on your phone, for free!</string>
+    <string name="thanks_for_trying">Thanks for the trial!</string>
 
 </resources>
