--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="menu_mobile_only">Mobile Only</string>
     <string name="menu_snooze">Snooze notifications</string>
     <string name="menu_call">Call contact</string>
+    <string name="menu_video_call">Video call with Duo</string>
     <string name="menu_view_contact">View contact</string>
     <string name="menu_view_contacts">View contacts</string>
     <string name="menu_view_media">View media</string>
