improvements to the initial account information screen

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -688,8 +688,8 @@
     <string name="optimized_for_all_your_devices">Pulse is optimized for <b>all</b> your devices.
         Send texts from the web, a desktop computer, your tablet, a watch, and even your TV.</string>
     <string name="true_imessage_competitor">The first <b>true</b> iMessage competitor for Android.</string>
-    <string name="trial_description">With an online account, Pulse can be used to instantly send and receive SMS/MMS across <b>all of your devices</b>.</string>
-    <string name="purchase_description">Try it <b>absolutely free for seven days</b>, then decide if you want to continue with a subscription or one-time purchase:\n\n<b>$0.99</b> per month\n<b>$1.99</b> every three months\n<b>$5.99</b> per year\n<b>$10.99</b> for a lifetime membership</string>
+    <string name="trial_description">No completion can touch Pulse\'s <b>endless platform support</b> paired with it\'s <b>low price</b>. Messages sync between all your devices, instantly and seamlessly.</string>
+    <string name="purchase_description">Give the online version a try, for <b>seven days</b>, then you decide how you want to support the app:\n\n<b>$10.99</b> for a lifetime membership\n<b>$5.99</b> per year\n<b>$1.99</b> every three months\n<b>$0.99</b> per month</string>
     <string name="try_it">Start your free trial!</string>
     <string name="select_purchase">Select Purchase</string>
     <string name="have_an_account">Have an account?\nSign in</string>
